--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -1,19 +1,22 @@
-.dashboardContent{
-    .filter-panel{
+.dashboardContent {
+    .filter-panel {
         align-items: flex-start;
         float: left;
         background: white;
         margin-top: 10px;
+        width: 20%;
     }
 
     .buttonLaunchYear {
+        width: 40%;
         box-shadow: none;
         background: #9bde9b;
         border: none;
         margin: 10px;
-        border-radius: 10px;        
+        border-radius: 10px;
     }
-    .buttonLaunchYear:hover,.active {
+    .buttonLaunchYear:hover,
+    .active {
         background: #5bc55b;
     }
     .launchYearInput {
@@ -29,34 +32,130 @@
     }
     input::-webkit-outer-spin-button,
     input::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
+        -webkit-appearance: none;
+        margin: 0;
     }
-    .space-text{
+    .space-text {
         font-size: 18px;
-    }
-    .card {
-        padding-top: 10px;
-        display: inline-block;
-        height: 360px;
-        max-height: 360px;
-        margin-top: 10px;
-        float: left;
-        text-align: center;
-        overflow: auto;
-        img {
-            width: 100%;
-            background: #eaeaea;
-            padding-bottom: 10px;
-            padding-top: 5px;
-        }
-        .container {
-            padding-left: 0;
-            font-size: 13px;
-            text-align: left;
-        }
     }
     h4 {
         font-size: 1rem;
+    }
+}
+
+.card {
+    width: 22%;
+    padding: 15px;
+    display: inline-block;
+    margin-left: 10px;
+    margin-top: 8px;
+    height: 370px;
+    overflow: auto;
+    .cardData {
+        b {
+            span {
+                max-width: 70%;
+                display: inline-block;
+                text-overflow: ellipsis;
+                overflow: hidden;
+                white-space: nowrap;
+                text-overflow: ellipsis;
+            }
+        }
+    }
+    .container {
+        padding-left: 0;
+        padding-top: 10px;
+    }
+    img {
+        width: 100% !important;
+        background: #eaeaea;
+    }
+}
+
+.itemData,.noRecordFound {
+    width: 80%;
+    display: inline-block;
+}
+
+.noRecordFound {
+    .card {
+        width: 100%;
+        text-align: center;
+        vertical-align: middle;
+        font-size: 20px;
+        font-weight: bold;
+    }
+}
+
+@media only screen and (min-width: 1441px) and (max-width: 2100px) {
+    .card {
+        height: 455px;
+    }
+}
+
+@media only screen and (min-width: 1025px) and (max-width: 1440px) {
+    .card {
+        height: 390px;
+    }
+}
+
+@media only screen and (min-width: 701px) and (max-width: 1024px) {
+    .buttonLaunchYear {
+        width: 40% !important;
+    }
+    .filter-panel {
+        width: 35% !important;
+    }
+    .itemData,.noRecordFound {
+        width: 65% !important;
+        display: inline-block !important;
+    }
+    .card {
+        width: 45% !important;
+        padding: 15px !important;
+        display: inline-block !important;
+        margin-left: 10px !important;
+        margin-top: 8px !important;
+        height: 380px !important;
+        overflow: auto !important;
+        .cardData {
+            b {
+                span {
+                    max-width: 70% !important;
+                    display: inline-block !important;
+                    text-overflow: ellipsis !important;
+                    overflow: hidden !important;
+                    white-space: nowrap !important;
+                    text-overflow: ellipsis !important;
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (min-width: 300px) and (max-width: 700px) {
+    .buttonLaunchYear {
+        width: 40% !important;
+    }
+    .filter-panel {
+        width: 50% !important;
+    }
+    .card {
+        width: 100% !important;
+        padding: 15px !important;
+        height: auto;
+    }
+    .itemData,.noRecordFound {
+        width: 50%;
+    }
+}
+
+@media only screen and (min-width: 330px) and (max-width: 429px) {
+    .buttonLaunchYear {
+        width: 35% !important;
+    }
+    .filter-panel {
+        width: 45% !important;
     }
 }
